#835 - generate jar instead of bootjar

--- a/avni-server-data/build.gradle
+++ b/avni-server-data/build.gradle
@@ -56,3 +56,11 @@ dependencyManagement {
 test {
     useJUnitPlatform()
 }
+
+tasks.bootJar {
+    enabled = false
+}
+
+tasks.jar {
+    enabled = true
+}
