avniproject/avni-webapp#1258 - basic JS project module

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'avni-server'
 include ':avni-server-api'
 project(':avni-server-api').projectDir = "$rootDir/avni-server-api" as File
 include 'avni-server-data'
+include 'avni-rule-server'
 
