--- a/avni-rule-server/build.gradle
+++ b/avni-rule-server/build.gradle
@@ -1,6 +1,18 @@
+buildscript {
+    ext {
+        springBootVersion = '3.3.5'
+    }
+    repositories { mavenCentral() }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
 plugins {
     id 'java'
     id 'application'
+    id 'org.springframework.boot' version "${springBootVersion}"
+    id 'io.spring.dependency-management' version '1.1.6'
 }
 
 application {
@@ -14,6 +26,14 @@ repositories {
 dependencies {
     implementation 'org.graalvm.sdk:graal-sdk:23.0.0' // Adjust version as needed
     implementation 'org.graalvm.js:js:23.0.0' // Adjust version as needed
+    implementation "org.springframework.boot:spring-boot-starter-data-jpa:${springBootVersion}"
+    implementation project(path: ':avni-server-data')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
+    }
 }
 
 tasks.withType(JavaCompile) {
