--- a/avni-rule-server/build.gradle
+++ b/avni-rule-server/build.gradle
@@ -35,8 +35,8 @@ dependencies {
     implementation("org.springframework.boot:spring-boot-starter-security:${springBootVersion}")
     testImplementation "com.github.tomakehurst:wiremock-jre8-standalone:2.34.0"
     implementation "org.postgresql:postgresql"
-    implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
-    testImplementation 'org.springframework.batch:spring-batch-test:5.1.2'
+//    implementation("org.springframework.boot:spring-boot-starter-batch:${springBootVersion}")
+//    testImplementation 'org.springframework.batch:spring-batch-test:5.1.2'
     implementation "joda-time:joda-time:2.10.10"
     implementation("org.hibernate:hibernate-java8:5.6.15.Final") {
         exclude(group: 'org.hibernate', module: 'hibernate-core')
