--- a/avni-rule-server/src/main/resources/application.properties
+++ b/avni-rule-server/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.type=org.apache.tomcat.jdbc.pool.DataSource
 spring.datasource.tomcat.testWhileIdle=true
 spring.datasource.tomcat.validationQuery=SELECT 1
-#spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetOrganisationJdbcInterceptor
+spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetOrganisationJdbcInterceptor
 
 #Bugsnag
 avni.bugsnag.apiKey=${OPENCHS_SERVER_BUGSNAG_API_KEY:dummy}
