--- a/avni-server-data/build.gradle
+++ b/avni-server-data/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation "org.mockito:mockito-core:3.12.4"
     implementation("jakarta.validation:jakarta.validation-api:3.0.2")
+
+    implementation group: 'org.apache.tomcat', name: 'tomcat-jdbc'
 }
 
 dependencyManagement {
