--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -127,6 +127,7 @@ avni.exception.in.response=true
 avni.keycloak.avni.publicKeyId=dummy
 
 #metabase
+avni.self.service.enabled=${AVNI_SELF_SERVICE_ENABLED:false}
 metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
 
