--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -25,6 +25,7 @@ spring.flyway.baseline-on-migrate=false
 spring.flyway.out-of-order=true
 spring.flyway.ignore-migration-patterns=repeatable:missing
 spring.flyway.table=schema_version
+spring.flyway.validate-on-migrate=${AVNI_FLYWAY_VALIDATE_ON_MIGRATE:true}
 
 # JPA, Hibernate and Spring Data
 spring.jpa.show-sql=${SHOW_SQL:false}
