#844 | Rename flag to avni_reporting_metabase_self_service_enabled

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -169,7 +169,7 @@ avni.reportingSystems[2].name=${AVNI_REPORTING_SYSTEM_2_NAME:}
 avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:}
 
 #metabase
-avni.self.service.enabled=${AVNI_SELF_SERVICE_ENABLED:false}
+avni.reporting.metabase.self.service.enabled=${AVNI_REPORTING_METABASE_SELF_SERVICE_ENABLED:false}
 metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_uhFRMqCSre4v/hTZTsQcMnh8k2GCZFX2tGmSBdoxNow=}
 
