#854 - do not return job status after starting the job as the status is updated outside the transaction. fixed wrong bean wiring. ssl support in database made configurable with prod value as default.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.profiles.active=${OPENCHS_MODE:dev}
 avni.database=${OPENCHS_DATABASE:openchs}
 avni.database.port=${OPENCHS_DATABASE_PORT:5432}
 avni.database.server=${OPENCHS_DATABASE_HOST:localhost}
+avni.database.server.supportsSSL=${AVNI_DATABASE_SUPPORTS_SSL:true}
 spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://${avni.database.server}:${avni.database.port}/${avni.database}?currentSchema=public}
 spring.datasource.username=${OPENCHS_DATABASE_USER:openchs}
 spring.datasource.password=${OPENCHS_DATABASE_PASSWORD:password}
