--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -7,6 +7,7 @@ spring.servlet.multipart.max-request-size=10028KB
 avni.database=${OPENCHS_DATABASE:openchs}
 avni.database.port=${OPENCHS_DATABASE_PORT:5432}
 avni.database.server=${OPENCHS_DATABASE_HOST:localhost}
+avni.database.server.supportsSSL=true
 spring.datasource.url=${OPENCHS_DATABASE_URL:jdbc:postgresql://${avni.database.server}:${avni.database.port}/openchs_test}
 spring.datasource.username=${OPENCHS_DATABASE_USER:openchs}
 spring.datasource.password=${OPENCHS_DATABASE_PASSWORD:password}
