#881 - update metabase schedules in quartz and metabase db.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -173,6 +173,9 @@ avni.reportingSystems[2].url=${AVNI_REPORTING_SYSTEM_2_URL:}
 avni.reporting.metabase.self.service.enabled=${AVNI_REPORTING_METABASE_SELF_SERVICE_ENABLED:false}
 metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_uhFRMqCSre4v/hTZTsQcMnh8k2GCZFX2tGmSBdoxNow=}
+metabase.db.url=${METABASE_DB_URL:jdbc:postgresql://localhost:5432/reportingdb}
+metabase.db.user=${METABASE_DB_USER:reporting_user}
+metabase.db.password=${METABASE_DB_PASSWORD:password}
 
 # end of life
 avni.endpoints.endOfLife.1=${AVNI_ENDPOINT_END_OF_LIFE_1:2024-09-05}
