--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -132,6 +132,10 @@ avni.reporting.metabase.self.service.enabled=${AVNI_REPORTING_METABASE_SELF_SERV
 metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
 
+metabase.db.url=jdbc:postgresql://localhost:5432/reportingdb
+metabase.db.user=reporting_user
+metabase.db.password=password
+
 # end of life
 avni.endpoints.endOfLife.1=2024-09-09
 
