avniproject/avni-server#854 - get metabase resources during status only in test environments. initial database sync wait time configuration. remove json unfolding.

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -176,6 +176,7 @@ metabase.api.key=${METABASE_API_KEY:mb_uhFRMqCSre4v/hTZTsQcMnh8k2GCZFX2tGmSBdoxN
 metabase.db.url=${METABASE_DB_URL:jdbc:postgresql://localhost:5432/reportingdb}
 metabase.db.user=${METABASE_DB_USER:reporting_user}
 metabase.db.password=${METABASE_DB_PASSWORD:password}
+avni.reporting.metabase.db.sync.max.timeout.in.minutes=${AVNI_REPORTING_METABASE_DB_SYNC_MAX_TIMEOUT_IN_MINUTES:15}
 
 # end of life
 avni.endpoints.endOfLife.1=${AVNI_ENDPOINT_END_OF_LIFE_1:2024-09-05}
