--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -129,6 +129,7 @@ avni.keycloak.avni.publicKeyId=dummy
 
 #metabase
 avni.reporting.metabase.self.service.enabled=${AVNI_REPORTING_METABASE_SELF_SERVICE_ENABLED:false}
+avni.reporting.metabase.db.sync.max.timeout.in.minutes=20
 metabase.api.url=${METABASE_API_URL:http://localhost:3000/api}
 metabase.api.key=${METABASE_API_KEY:mb_hwsYP2sFN7fvwM5LTS4d/tnIqA5SeHUxwUhm2KAI1/o=}
 
