#897 | Make storage management job cron expression configurable

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -109,8 +109,13 @@ csp.enabled=${OPENCHS_CSP_ENABLED:false}
 csp.allowed.hosts=${OPENCHS_CSP_ALLOWED_HOSTS:*.amazonaws.com keycloak-staging.avniproject.org}
 analytics.path=${OPENCHS_ANALYTICS_PATH:/opt/openchs/analytics/}
 spring.jackson.serialization.write-dates-as-timestamps=false
-spring.batch.initialize-schema=always
+
+# Batch Jobs
+spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
+avni.messaging.scheduledSinceDays=${AVNI_SEND_MESSAGES_SCHEDULED_SINCE_DAYS:4}
+avni.job.storagemanagement.cron=${AVNI_JOB_STORAGE_MANAGEMENT_CRON:0 0 2 * * *}
 
 # Node Rules Server
 node.server.url=http://localhost:3000
@@ -147,9 +152,6 @@ server.tomcat.accesslog.max-days=90
 
 #Exotel
 avni.connectToExotelInDev=${OPENCHS_EXOTEL_IN_DEV:false}
-
-avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
-avni.messaging.scheduledSinceDays=${AVNI_SEND_MESSAGES_SCHEDULED_SINCE_DAYS:4}
 
 #Cache
 avni.cache.max.entries=${OPENCHS_CACHE_MAX_ENTRIES:100}
