--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -71,8 +71,13 @@ minio.secretAccessKey=${OPENCHS_MINIO_SECRET_ACCESS_KEY:dummy}
 # REST
 spring.jackson.serialization.fail-on-empty-beans=false
 spring.jackson.serialization.write-dates-as-timestamps=false
-spring.batch.initialize-schema=always
+
+# Batch Jobs
+spring.batch.jdbc.initialize-schema=always
 spring.batch.job.enabled=false
+avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
+avni.messaging.scheduledSinceDays=${AVNI_SEND_MESSAGES_SCHEDULED_SINCE_DAYS:4}
+avni.job.storagemanagement.cron=${AVNI_JOB_STORAGE_MANAGEMENT_CRON:0 0 2 * * *}
 
 # Node Rules Server
 node.server.url=http://localhost:3000
@@ -110,8 +115,6 @@ avni.cache.max.weight=${OPENCHS_CACHE_MAX_WEIGHT:3}
 
 logging.level.org.apache.http=DEBUG
 logging.level.httpclient.wire=DEBUG
-avni.messagingScheduleMillis=${OPENCHS_MESSAGE_SEND_JOB_SCHEDULE:300000}
-avni.messaging.scheduledSinceDays=${AVNI_SEND_MESSAGES_SCHEDULED_SINCE_DAYS:4}
 
 avni.idp.type=${AVNI_IDP_TYPE:none}
 avni.webapp.timeout.in.minutes=${AVNI_WEBAPP_TIMEOUT:20}
