#0 | Suppress "Invalid 'expires' attribute" warning flooding logs when canned analytics is being setup

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -162,6 +162,7 @@ avni.enhancedValidation.enabled=${AVNI_ENHANCED_VALIDATION:true}
 avni.exception.in.response=${AVNI_SEND_EXCEPTION_IN_RESPONSE:true}
 
 logging.level.org.hibernate.SQL=OFF
+logging.level.org.apache.hc.client5.http.protocol.ResponseProcessCookies=ERROR
 
 #reporting
 avni.reportingSystems[0].name=${AVNI_REPORTING_SYSTEM_0_NAME:}
