--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -189,3 +189,32 @@ server.servlet.register-default-servlet=true
 
 #default org configuration
 avni.default.org.user.db.password=${AVNI_DEFAULT_ORG_USER_DB_PASSWORD:password}
+
+# Avni Sync Configuration
+# Server configuration for sync
+avni.sync.server.url=${AVNI_SYNC_SERVER_URL:https://your-avni-server.com}
+avni.sync.server.apiKey=${AVNI_SYNC_API_KEY:}
+
+# Sync database configuration (H2 for local sync storage)
+avni.sync.database.url=${AVNI_SYNC_DATABASE_URL:jdbc:h2:./data/avni-sync-db}
+avni.sync.database.username=${AVNI_SYNC_DATABASE_USERNAME:sa}
+avni.sync.database.password=${AVNI_SYNC_DATABASE_PASSWORD:}
+
+# Media storage configuration
+avni.sync.media.baseDirectory=${AVNI_SYNC_MEDIA_DIRECTORY:./media}
+
+# Device configuration
+avni.sync.device.id=${AVNI_SYNC_DEVICE_ID:}
+
+# HTTP client configuration
+avni.sync.http.loggingEnabled=${AVNI_SYNC_HTTP_LOGGING:false}
+avni.sync.http.connectionTimeoutSeconds=${AVNI_SYNC_HTTP_CONNECTION_TIMEOUT:30}
+avni.sync.http.readTimeoutSeconds=${AVNI_SYNC_HTTP_READ_TIMEOUT:60}
+avni.sync.http.writeTimeoutSeconds=${AVNI_SYNC_HTTP_WRITE_TIMEOUT:120}
+
+# Sync behavior configuration
+avni.sync.autoSyncEnabled=${AVNI_SYNC_AUTO_ENABLED:true}
+avni.sync.backgroundIntervalMinutes=${AVNI_SYNC_BACKGROUND_INTERVAL:30}
+avni.sync.pageSize=${AVNI_SYNC_PAGE_SIZE:100}
+avni.sync.maxRetryAttempts=${AVNI_SYNC_MAX_RETRY:3}
+avni.sync.retryDelaySeconds=${AVNI_SYNC_RETRY_DELAY:5}
