--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -83,7 +83,8 @@ avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 avni.environment=${AVNI_ENVIRONMENT:development}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
-
+avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
+avni.copilot.enabled=${AVNI_COPILOT_ENABLED:true}
 # Network
 server.tomcat.protocol-header=x-forwarded-proto
 spring.security.require-ssl=true
