--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -18,6 +18,9 @@ spring.datasource.tomcat.validationQuery=SELECT 1
 spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetOrganisationJdbcInterceptor
 spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
+avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
+avni.copilot.enabled=${AVNI_COPILOT_ENABLED:true}
+
 #Tomcat
 server.tomcat.accesslog.max-days=90
 
