#000 | correct api doc paramName for get subjects by type

--- a/avni-server-api/src/main/resources/api/external-api.yaml
+++ b/avni-server-api/src/main/resources/api/external-api.yaml
@@ -34,7 +34,7 @@ paths:
           explode: true
           schema:
             type: string
-        - name: subjectTypeName
+        - name: subjectType
           in: query
           description: subject type
           required: false
@@ -792,7 +792,7 @@ paths:
           explode: true
           schema:
             type: string
-        - name: encounterTypee
+        - name: encounterType
           in: query
           description: subject encounter type name
           required: false
