#917 | Added copilot config to Configuration

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -84,7 +84,8 @@ avni.environment=${AVNI_ENVIRONMENT:development}
 spring.servlet.multipart.max-file-size=10028KB
 spring.servlet.multipart.max-request-size=10028KB
 avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
-avni.copilot.enabled=${AVNI_COPILOT_ENABLED:true}
+avni.copilot.token=${AVNI_COPILOT_TOKEN:dummy}
+avni.copilot.enabled=${AVNI_COPILOT_ENABLED:false}
 # Network
 server.tomcat.protocol-header=x-forwarded-proto
 spring.security.require-ssl=true
