#930 | Added avni base url to Configuration and added the missing variables to application.properties in test aswell

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -19,7 +19,9 @@ spring.datasource.tomcat.jdbc-interceptors=org.avni.server.framework.tomcat.SetO
 spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
 avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
-avni.copilot.enabled=${AVNI_COPILOT_ENABLED:true}
+avni.copilot.enabled=${AVNI_COPILOT_ENABLED:false}
+avni.copilot.token=${AVNI_COPILOT_TOKEN:dummy}
+avni.base.url=${AVNI_BASE_URL:https://localhost:8021}
 
 #Tomcat
 server.tomcat.accesslog.max-days=90
