avniproject/avni-webapp#1546 | Set max file size to 10MB instead of 9.7MB

--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -2,8 +2,8 @@
 debug=false
 avni.defaultUserName=${OPENCHS_USER_NAME:admin}
 avni.environment=test
-spring.servlet.multipart.max-file-size=10028KB
-spring.servlet.multipart.max-request-size=10028KB
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 avni.database=${OPENCHS_DATABASE:openchs}
 avni.database.port=${OPENCHS_DATABASE_PORT:5432}
 avni.database.server=${OPENCHS_DATABASE_HOST:localhost}
