avniproject/avni-webapp#1618 | Add show_templates to CopilotConfig

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -86,6 +86,7 @@ spring.servlet.multipart.max-request-size=100MB
 avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
 avni.copilot.token=${AVNI_COPILOT_TOKEN:dummy}
 avni.copilot.enabled=${AVNI_COPILOT_ENABLED:false}
+avni.showTemplates=${AVNI_SHOW_TEMPLATES:false}
 avni.base.url=${AVNI_BASE_URL:https://localhost:8021}
 # Network
 server.tomcat.protocol-header=x-forwarded-proto
