--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -20,6 +20,7 @@ spring.flyway.schemas=public
 spring.flyway.baseline-on-migrate=false
 avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
 avni.copilot.enabled=${AVNI_COPILOT_ENABLED:false}
+avni.showTemplates=${AVNI_SHOW_TEMPLATES:false}
 avni.copilot.token=${AVNI_COPILOT_TOKEN:dummy}
 avni.base.url=${AVNI_BASE_URL:https://localhost:8021}
 
