avniproject/avni-ai#31 | Add support for copilotFormValidationApiKey in aiConfig

--- a/avni-server-api/src/main/resources/application.properties
+++ b/avni-server-api/src/main/resources/application.properties
@@ -85,6 +85,7 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
 avni.copilot.token=${AVNI_COPILOT_TOKEN:dummy}
+avni.copilot.form.validation.api.key=${AVNI_COPILOT_FORM_VALIDATION_API_KEY:dummy}
 avni.copilot.enabled=${AVNI_COPILOT_ENABLED:false}
 avni.showTemplates=${AVNI_SHOW_TEMPLATES:false}
 avni.base.url=${AVNI_BASE_URL:https://localhost:8021}
