--- a/avni-server-api/src/test/resources/application.properties
+++ b/avni-server-api/src/test/resources/application.properties
@@ -22,6 +22,7 @@ avni.mcp.server.url=${AVNI_MCP_SERVER_URL:https://localhost:8023}
 avni.copilot.enabled=${AVNI_COPILOT_ENABLED:false}
 avni.showTemplates=${AVNI_SHOW_TEMPLATES:false}
 avni.copilot.token=${AVNI_COPILOT_TOKEN:dummy}
+avni.copilot.form.validation.api.key=${AVNI_COPILOT_FORM_VALIDATION_API_KEY:dummy}
 avni.base.url=${AVNI_BASE_URL:https://localhost:8021}
 
 #Tomcat
